Angular Bases Proyectos

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,16 @@
   "compileOnSave": false,
   "compilerOptions": {
     "outDir": "./dist/out-tsc",
+    "baseUrl": "./",
+    "paths": {
+      "@core/*": ["src/app/core/*"],
+      "@environments/*": ["src/environments/*"],
+      "@modules/*": ["src/app/modules/*"],
+      "@constants/*": ["src/app/core/constants/*"],
+      "@services/*": ["src/app/core/services/*"],
+      "@interceptors/*": ["src/app/core/interceptors/*"],
+      "@layout/*": ["src/app/core/layout/*"]
+    },
     "strict": true,
     "noImplicitOverride": true,
     "noPropertyAccessFromIndexSignature": true,
