--- a/package.json
+++ b/package.json
@@ -18,7 +18,14 @@
     "@angular/platform-browser": "^19.0.0",
     "@angular/platform-browser-dynamic": "^19.0.0",
     "@angular/router": "^19.0.0",
+    "@tailwindcss/postcss": "^4.0.8",
+    "ag-grid-angular": "^33.1.1",
+    "ag-grid-community": "^33.1.1",
+    "ngx-pagination": "^6.0.3",
+    "postcss": "^8.5.3",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.17.2",
+    "tailwindcss": "^4.0.8",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
